add_executable(multiplication_puzzle multiplication_puzzle.cc)
target_link_libraries(multiplication_puzzle PUBLIC glasgow_constraint_solver)

find_package(Boost 1.74 COMPONENTS program_options REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
target_link_libraries(multiplication_puzzle LINK_PUBLIC ${Boost_LIBRARIES})